# database

./: .dockerignore  .gitignore  002_main.sql  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  diesel.toml
.github/: dependabot.yaml
.github/actions/migrate/: action.yaml
.github/actions/migrate-and-generate/: action.yaml
.github/actions/wait-for-postgres/: action.yaml
.github/workflows/: build.yaml  docker.yaml  shell.yaml
crates/cli/: Cargo.toml  README.md  main.rs
crates/client/: Cargo.toml  README.md  lib.rs
crates/client/config/: custom_hooks.rs  mod.rs  pool_configs.rs
crates/client/migrate/: custom_hooks.rs  mod.rs
crates/client/query/: account_actions.rs  account_permissions.rs  account_sessions.rs  account_tokens.rs  accounts.rs  mod.rs  project_invites.rs  project_members.rs  projects.rs  workflow_executions.rs  workflow_schedules.rs  workflow_webhooks.rs  workflows.rs  workspace_invites.rs  workspace_members.rs  workspace_schedules.rs  workspace_webhooks.rs  workspaces.rs
crates/client/utils/: dsl.rs  mod.rs  serde.rs
crates/connect/: Cargo.toml  README.md  build.rs  lib.rs
crates/connect/config/: constraints.rs  mod.rs  pool_configs.rs
crates/connect/query/: account_emails.rs  account_permissions.rs  account_sessions.rs  accounts.rs  mod.rs  project_invites.rs  project_members.rs  projects.rs  workflows.rs
crates/generate/: Cargo.toml  README.md  lib.rs
crates/generate/constraints/: mod.rs
crates/generate/enumerations/: mod.rs
crates/migrate/: Cargo.toml  README.md  build.rs  lib.rs
crates/migrate/config/: custom_hooks.rs  embedded_query.rs  mod.rs
crates/migrate/migration/: m20241205_021503_init.rs  mod.rs
crates/schema/: Cargo.toml  README.md  lib.rs  schema.rs
crates/schema/constraints/: mod.rs
crates/schema/enumerations/: mod.rs
crates/schema/types/: constraints.rs  enumerations.rs  mod.rs
migration/: 001_init.down.sql  001_init.up.sql
migrations/: 001_init.up.sql  m20241205_021500.up.sql
migrations/2024-12-06-010918_initial_setup/: down.sql  up.sql
migrations/2024-12-06-010930_create_accounts/: down.sql  up.sql
migrations/2024-12-06-010943_create_projects/: down.sql  up.sql
migrations/2024-12-06-010943_create_workspaces/: down.sql  up.sql
migrations/2024-12-06-011353_create_workflows/: down.sql  up.sql
scripts/: 001_config.sh  002_enable.sql  002_setup_query.sql
