# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-database-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "migrate"
path = "main.rs"

[dependencies]
sea-orm-migration = { workspace = true }
axiston-database-migrate = { workspace = true }
tokio = { workspace = true }
