# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-database-migrate"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[dependencies]
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[build-dependencies]
git2 = { version = "0.19", features = [] }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
