# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-database-migrate"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[dependencies]
diesel = { workspace = true }
diesel-async = { workspace = true, features = ["async-connection-wrapper"] }
diesel_migrations = { workspace = true }

tracing = { workspace = true }
derive_more = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
