# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "axiston-db-schema"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = "./README.md"

authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

# Include the schema.rs explicitly.
include = ["*.rs", "*.toml", "*.lock"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
path = "lib.rs"

[dependencies]
diesel = { workspace = true }
diesel-derive-enum = { workspace = true }
